Do header layout

--- a/index.html
+++ b/index.html
@@ -76,11 +76,23 @@
         <div class="header">
 
             <div class="top">
-                <div class="search icon">#</div>
-                <input type="search"/>
+                <div class="search-section">
+                    <div class="search icon">#</div>
+                    <input type="search"/>
+                </div>
+
+                <div class="additional">
+                    <div class="noti icon">
+                        #
+                    </div>
+    
+                    <img src="" alt="Profile Picture">
+                    <p>Morgan Oakley</p>
+                </div>
+
             </div>
 
-            <div>
+            <div class="bottom">
                 <div class="handle">
                     <img alt="Profile Picture"/>
 
