--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                         #
                     </div>
     
-                    <img src="" alt="Profile Picture">
+                    <img src="https://images.unsplash.com/photo-1741879080222-b9b5f20b3333?q=80&w=1926&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                     alt="Profile Picture">
                     <p>Morgan Oakley</p>
                 </div>
 
@@ -94,11 +95,13 @@
 
             <div class="bottom">
                 <div class="handle">
-                    <img alt="Profile Picture"/>
+                    <img
+                    src="https://images.unsplash.com/photo-1741879080222-b9b5f20b3333?q=80&w=1926&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="Profile Picture"/>
 
                     <div>
                         <p>Hi there,</p>
-                        <p>Morgan Oakley (@morgan)</p>    
+                        <p>Profile pic credit: <a href="https://unsplash.com/photos/abstract-geometric-structure-on-a-black-background-IiLVwx3e8bk">Li Zhang</a></p>    
                     </div>
                 </div>
 
@@ -202,21 +205,24 @@
                     <p class="section-name">Trending</p>
                     <div class="trending-accounts">
                         <div class="account">
-                            <img src="https://plus.unsplash.com/premium_photo-1674406763863-b64be22c78a9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" alt="Profile Picture">
+                            <img src="https://images.unsplash.com/photo-1741879080222-b9b5f20b3333?q=80&w=1926&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+                                alt="Profile Picture">
+                            <div class="account-info">
+                                <p class="account-name"></p>@tegan
+                                <p class="account-description">World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="account">
+                            <img src="https://images.unsplash.com/photo-1741879080222-b9b5f20b3333?q=80&w=1926&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+                                alt="Profile Picture">
                             <div class="account-info">
                                 <p class="account-name">@tegan</p>
                                 <p class="account-description">World Peace Builder</p>
                             </div>
                         </div>
                         <div class="account">
-                            <img src="https://plus.unsplash.com/premium_photo-1674406763863-b64be22c78a9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" alt="Profile Picture">
-                            <div class="account-info">
-                                <p class="account-name">@tegan</p>
-                                <p class="account-description">World Peace Builder</p>
-                            </div>
-                        </div>
-                        <div class="account">
-                            <img src="https://plus.unsplash.com/premium_photo-1674406763863-b64be22c78a9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" alt="Profile Picture">
+                            <img src="https://images.unsplash.com/photo-1741879080222-b9b5f20b3333?q=80&w=1926&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+                                alt="Profile Picture">
                             <div class="account-info">
                                 <p class="account-name">@tegan</p>
                                 <p class="account-description">World Peace Builder</p>
@@ -224,7 +230,8 @@
                             
                         </div>
                         <div class="account">
-                            <img src="https://plus.unsplash.com/premium_photo-1674406763863-b64be22c78a9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8" alt="Profile Picture">
+                            <img src="https://images.unsplash.com/photo-1741879080222-b9b5f20b3333?q=80&w=1926&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+                                alt="Profile Picture">
                             <div class="account-info">
                                 <p class="account-name">@tegan</p>
                                 <p class="account-description">World Peace Builder</p>
