--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <script src="//code.iconify.design/1/1.0.6/iconify.min.js" defer></script>
+
 </head>
+
 <body>
 
     <div class="dashboard">
@@ -20,7 +27,7 @@
                             </div>
                             <div class="right">
                                 <div></div>
-                                <div class="bottom"></div>
+                                <div></div>
                             </div>
                         </div>
                         <p class="text">Dashboard</p>
@@ -29,42 +36,42 @@
     
                 <div class="services">
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-home"></span></p>
                         <p class="text">Home</p>
                     </a>
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-card-account-details-outline"></span></p>
                         <p class="text">Profile</p>
                     </a>
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-message-reply"></span></p>
                         <p class="text">Messages</p>
                     </a>
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-clock-time-three"></span></p>
                         <p class="text">History</p>
                     </a>
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-note-multiple"></span></p>
                         <p class="text">Tasks</p>
                     </a>
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-account-group"></span></p>
                         <p class="text">Communities</p>
                     </a>    
                 </div>
                     
                 <div class="meta">
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-cog"></span></p>
                         <p class="text">Settings</p>
                     </a>
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-help-box"></span></p>
                         <p class="text">Support</p>
                     </a>
                     <a href="#">
-                        <p class="icon">#</p>
+                        <p class="icon"><span class="iconify" data-icon="mdi-shield-check"></span></p>
                         <p class="text">Privacy</p>
                     </a>
                 </div>            
