Style header section

--- a/index.html
+++ b/index.html
@@ -84,13 +84,16 @@
 
             <div class="top">
                 <div class="search-section">
-                    <div class="search icon">#</div>
+                    <div class="search icon">
+                        <p class="icon"><span class="iconify" data-icon="mdi-magnify"></span></p>
+
+                    </div>
                     <input type="search"/>
                 </div>
 
                 <div class="additional">
                     <div class="noti icon">
-                        #
+                        <span class="iconify" data-icon="mdi-bell-ring-outline"></span>
                     </div>
     
                     <img src="https://images.unsplash.com/photo-1741879080222-b9b5f20b3333?q=80&w=1926&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -107,7 +110,7 @@
                     alt="Profile Picture"/>
 
                     <div>
-                        <p>Hi there,</p>
+                        <p class="small">Hi there,</p>
                         <p>Profile pic credit: <a href="https://unsplash.com/photos/abstract-geometric-structure-on-a-black-background-IiLVwx3e8bk">Li Zhang</a></p>    
                     </div>
                 </div>
