Style projects-section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <div>
                         <p class="small">Hi there,</p>
-                        <p>Profile pic credit: <a href="https://unsplash.com/photos/abstract-geometric-structure-on-a-black-background-IiLVwx3e8bk">Li Zhang</a></p>    
+                        <p>Profile pic credit: <a target="_blank" href="https://unsplash.com/photos/abstract-geometric-structure-on-a-black-background-IiLVwx3e8bk">Li Zhang</a></p>    
                     </div>
                 </div>
 
@@ -130,44 +130,87 @@
                 <div class="projects">
 
                     <div class="project-card">
-                        <p class="project-title">Super Cool Project</p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                        <div class="project-info">
+                            <p class="project-title">Super Cool Project</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                            </p>
+                        </div>
+
+                        <p class="three-icons">
+                            <span class="iconify" data-icon="mdi-star-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-eye-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-source-fork"></span>
                         </p>
                     </div>
-
                     <div class="project-card">
-                        <p class="project-title">Super Cool Project</p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                        <div class="project-info">
+                            <p class="project-title">Super Cool Project</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                            </p>
+                        </div>
+
+                        <p class="three-icons">
+                            <span class="iconify" data-icon="mdi-star-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-eye-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-source-fork"></span>
                         </p>
                     </div>
-
                     <div class="project-card">
-                        <p class="project-title">Super Cool Project</p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                        <div class="project-info">
+                            <p class="project-title">Super Cool Project</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                            </p>
+                        </div>
+
+                        <p class="three-icons">
+                            <span class="iconify" data-icon="mdi-star-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-eye-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-source-fork"></span>
                         </p>
                     </div>
-
                     <div class="project-card">
-                        <p class="project-title">Super Cool Project</p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                        <div class="project-info">
+                            <p class="project-title">Super Cool Project</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                            </p>
+                        </div>
+
+                        <p class="three-icons">
+                            <span class="iconify" data-icon="mdi-star-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-eye-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-source-fork"></span>
                         </p>
                     </div>
-
                     <div class="project-card">
-                        <p class="project-title">Super Cool Project</p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                        <div class="project-info">
+                            <p class="project-title">Super Cool Project</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                            </p>
+                        </div>
+
+                        <p class="three-icons">
+                            <span class="iconify" data-icon="mdi-star-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-eye-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-source-fork"></span>
                         </p>
                     </div>
-
                     <div class="project-card">
-                        <p class="project-title">Super Cool Project</p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                        <div class="project-info">
+                            <p class="project-title">Super Cool Project</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, error distinctio? Porro laborum accusamus perferendis praesentium architecto reprehenderit. Doloribus obcaecati atque vero quam fugit consequuntur repellat similique id tempora quisquam?
+                            </p>
+                        </div>
+
+                        <p class="three-icons">
+                            <span class="iconify" data-icon="mdi-star-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-eye-plus-outline"></span>
+                            <span class="iconify" data-icon="mdi-source-fork"></span>
                         </p>
                     </div>
                 </div>
