Style trending-section and add label to search-bar input

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 
             <div class="top">
                 <div class="search-section">
-                    <div class="search icon">
+                    <label for="search-bar"><div class="search icon">
                         <p class="icon"><span class="iconify" data-icon="mdi-magnify"></span></p>
 
-                    </div>
-                    <input type="search"/>
+                    </div> </label>
+                    <input type="search" id="search-bar"/>
                 </div>
 
                 <div class="additional">
